tests/out/error/match/not_exhaustive.in.bt
enum Color {
	red
	green
	blue
}

struct Mars{}
struct Venus{}
type Planet := Mars | Venus

c := Color.green
match c {
	.blue {}
}

p := Mars{} as Planet
match p {
	Mars {}
}
