tests/out/error/match/not_exhaustive.out
tests/out/error/match/not_exhaustive.in.bt:12:1 error: match must be exhaustive (add `else {}` or branches for red, green)
tests/out/error/match/not_exhaustive.in.bt:17:1 error: match must be exhaustive (add `else {}` or branches for Venus)
